--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "yarl>=1.9.2",
     "pydantic>=2.7.0",
     "coverage>=7.3.1",
+    "itsdangerous>=2.1.0",
 ]
 
 [project.optional-dependencies]
